48
================

21/12/23 animal find results using a numeric sort on shelter codes with no letters #1387
19/12/13 Fix webkit bug in mobile photo uploader when same photo is chosen again
16/12/13 Batch screen option to recalculate litter counts
15/12/13 Add CoordinatorFirstname/CoordinatorLastname wordkeys #1379
15/12/13 Allow TO token in email templates #1383
15/12/13 Anonymise couple fields #1385
14/12/13 Show altered date on altering vet person links
05/12/23 Include how many records have a value for an additional field #1371
04/12/23 Signing pad redirects to updated mobile UI
04/12/23 Add ASK ENTRYCATEGORY to reporting
01/12/23 Fix error generating report HTML with no columns
01/12/23 Use future owner email address when emailing from animal/media
29/11/23 Fix bug when using > reserves is on and calculating status #1335
21/11/23 Change Petcademy signup URL
20/11/23 Use intake date instead of today when cloning from templates 
18/11/23 Switch to old UI outside mobile2 menu for < Safari 11 users
17/11/23 Handle "not_found" when removing a PetRescue listing #1346
17/11/23 Include the merge person flags in online forms #1358
15/11/23 Catch and log bad base64 encoded credentials
13/11/23 Update latest movement deceased date on person records #1360
11/11/23 Update ages/times for foster animals as part of the batch
09/11/23 Can pass credentials as b64 token for login from other services
08/11/23 Refactor out UI mobileapp handling, use server redirects for now #1096
08/11/23 Leave $$ alone in report SQL as Postgres uses it for quoting strings
07/11/23 Set report ID in LinkID when auditing a report being viewed
07/11/23 QueryBuilder: support waiting list reports #1357
06/11/23 Use an overridable sitedef/file to store random names #1356
06/11/23 Use https for future references to deb repository
06/11/23 Trigger mobile app retired page #1096
30/10/23 Add FosterCapacity as an available column to find person #1341